<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/textLocationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="59dp"
        android:text="@string/title_location_ph_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtLatitude"
        android:layout_toLeftOf="@+id/edtLatitude"
        android:text="@string/lbl_latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/edtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textLocationHeading"
        android:layout_marginRight="18dp"
        android:layout_marginTop="22dp"
        android:ems="10" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtLongitude"
        android:layout_toLeftOf="@+id/edtLongitude"
        android:text="@string/lbl_longitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <EditText
        android:id="@+id/edtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtLatitude"
        android:layout_marginRight="18dp"
        android:ems="10" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtMessage"
        android:layout_toLeftOf="@+id/edtMessage"
        android:text="@string/lbl_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <EditText
        android:id="@+id/edtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/actionSpinner"
        android:layout_marginRight="18dp"
        android:ems="10" />

     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtMessage"
         android:layout_marginTop="29dp"
         android:layout_toRightOf="@+id/txtMessage"
         android:text="Save Plan" />

     <Spinner
         android:id="@+id/actionSpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtLongitude"
         android:layout_toRightOf="@+id/txtLongitude"
         android:entries="@array/callactions"
         android:prompt="@string/action_prompt" />

     <TextView
         android:id="@+id/txtAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/txtLongitude"
         android:layout_alignTop="@+id/actionSpinner"
         android:layout_marginTop="18dp"
         android:text="@string/lbl_action"
         android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
