<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:screenOrientation="portrait">
    
    <TextView
        android:id="@+id/txtTimeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="59dp"
        android:text="@string/title_time_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtCallStartTime"
        android:layout_toLeftOf="@+id/edtCallStartTime"
        android:text="@string/lbl_startime"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/edtCallStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTimeHeading"
        android:layout_marginRight="18dp"
        android:layout_marginTop="22dp"
        android:ems="10" />

    <TextView
        android:id="@+id/txtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtCallEndTime"
        android:layout_toLeftOf="@+id/edtCallEndTime"
        android:text="@string/lbl_endtime"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <EditText
        android:id="@+id/edtCallEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtCallStartTime"
        android:layout_marginRight="18dp"
        android:ems="10" />
     
     <TextView
        android:id="@+id/txtTimeAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/actionCallTimeSpinner"
        android:layout_toLeftOf="@+id/actionCallTimeSpinner"
        android:text="@string/lbl_action"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/txtTimeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtCallTimeMessage"
        android:layout_toLeftOf="@+id/edtCallTimeMessage"
        android:text="@string/lbl_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <EditText
        android:id="@+id/edtCallTimeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/actionCallTimeSpinner"
        android:layout_marginRight="18dp"
        android:ems="10" />

     <Button
         android:id="@+id/btnCallTimeSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtTimeMessage"
         android:layout_marginTop="29dp"
         android:layout_toRightOf="@+id/txtTimeMessage"
         android:text="Save Plan" />

     <Spinner
         android:id="@+id/actionCallTimeSpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/edtCallEndTime"
         android:layout_below="@+id/edtCallEndTime"
         android:entries="@array/callactions"
         android:prompt="@string/action_prompt" />

</RelativeLayout>
