<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/title_welcome_fragement"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome"
        android:paddingTop="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title_welcome_image"
        android:src="@drawable/android_logo" />

    <TextView
        android:id="@+id/txtSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:text="@string/swipe"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</RelativeLayout>
